# P

./: .gitignore  .gitmodules  404.html  AddingType.txt  CLAUDE.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING  ChangeList.md  Directory.Build.props  ForeignTypes.c  ForeignTypes.h  INSTALL.md  LICENSE.txt  Laundry.txt  NuGet.config  P.sln  P.sln.DotSettings  PInferGuide.md  PLinux.sln  README.md  README.txt  azure-pipelines.yml  benchmarksRuns.sh  diff.txt  index.html  p.props  sitemap.xml
Src/: CMakeLists.txt  CMakeSettings.json
Src/Compilers/P2Formula/: CheckUndeclaredIds.cs  FormulaASTNodes.cs  NoopVisitor.cs  P2Formula.csproj  P2Formula.sln  PAst.cs  PFormulaBuilder.cs  PParser.cs  PostVisitor.cs  Program.cs  SemanticPass.cs  ShiftReduceParserCode.cs  SideEffectfulExpressionsPass.cs  lexer.lex  parser.conflicts  parser.lst  parser.report.html  parser.y
Src/Compilers/PCompiler/: Compiler.cs  PCompiler.csproj  PCompiler.sln  PToC.cs  PToZing.cs  PTypes.cs  Program.cs
Src/CoyoteRuntime/: CoyoteRuntime.csproj  GodMachine.cs  PEvent.cs  PLogFormatter.cs  PMachine.cs  PModule.cs  PMonitor.cs
Src/CoyoteRuntime/Exceptions/: PInternalException.cs  PMachineTransitionException.cs  PMonitorTransitionException.cs
Src/CoyoteRuntime/Values/: PMachineValue.cs  PrtEnum.cs  PrtFloat.cs  PrtMap.cs  PrtSeq.cs  PrtSet.cs  PrtString.cs
Src/Domains/: CData.cs  Domains.csproj  Domains.sln  PData.cs  ZingData.cs
Src/Domains/Properties/: AssemblyInfo.cs
Src/Formula/Domains/: .PData.4ml.swp  CData.4ml  PData.4ml  ZingData.4ml
Src/Formula/Transforms/: ArrayToUpdate.4ml  PVisualize.4ml
Src/PChatBot/: .cursorrules  .env  .gitignore  Config  Makefile  README.md  analyze-checker-errors.py  compute_metrics.py  cursor-mcp-settings.example.json  env.template  evaluate_chatbot.py  mcp-config.json  requirements.txt  run_mcp.sh  visualize-pk-vs-tokens.py
Src/PChatBot/.p_corpus/: indexed_files.json
Src/PChatBot/configuration/: providers.yaml  workflows.yaml
Src/PChatBot/docs/: CURSOR_MCP_IMPROVEMENT_DESIGN.md  DESIGN_DOCUMENT.md
Src/PChatBot/resources/: pipeline.json
Src/PChatBot/scripts/: check_dependencies.py  mcp_e2e_protocols.py  regression_test.py
Src/PChatBot/src/: app.py
Src/PChatBot/tests/: regression_baseline.json  test_snowflake_latest_model.py  test_validation.py  test_workflow_persistence.py
Src/PChecker/: PChecker.sln
Src/PChecker/CheckerCore/: Checker.cs  CheckerConfiguration.cs  CheckerCore.csproj  CheckerMode.cs  ExhaustiveEngine.cs
Src/PChecker/CoverageReportMerger/: CoverageReportMerger.csproj  Program.cs
Src/PChecker/PChecker/: CommandLineOptions.cs  CoyoteRunner.cs  PChecker.cs  PChecker.csproj  PCheckerJobConfiguration.cs
Src/PCompiler/CommandLine/: CommandLine.cs  CommandLine.csproj  CommandLineOptions.cs  ParseCommandlineOptions.cs
Src/PCompiler/CompilerCore/: CompilationJob.cs  Compiler.cs  CompilerConfiguration.cs  CompilerCore.csproj  CompilerOutput.cs  DefaultCompilerOutput.cs  DefaultLocationResolver.cs  DefaultTranslationErrorHandler.cs  ICompilationJob.cs  ICompiler.cs  ICompilerConfiguration.cs  ICompilerOutput.cs  ITranslationErrorHandler.cs  PInferDriver.cs  SourceLocation.cs
Src/PCompiler/PCommandLine/: CheckFileValidity.cs  CommandLine.cs  CommandLineOptions_Temp.cs  CommandLineOutput.cs  CommandlineOptions.cs  PCommandLine.csproj  ParsePProjectFile.cs  ParserCompilerOptions.cs
Src/PEx/: pom.xml
Src/PEx/scripts/: README.md  build.sh  build_and_test.sh
Src/PInfer/: PInfer.csproj  PInferConfiguration.cs  PInferInvoke.cs
Src/PInfer/PInferTemplates/: Clone.java  Equality.java  FromDaikon.java  IncomparableValuesException.java  Main.java  MinerConfig.java  PEvent.java  PValue.java  PredicateEnumerator.java  TermEnumerator.java  TraceIndex.java  UncloneableValueException.java
Src/PInfer/Scripts/: ranking_with_llm.py  visualize_rank_summary.py
Src/PObserve/PObserve/: build.gradle.kts
Src/PObserve/PObserveCommons/: README.md  build.gradle.kts
Src/PObserve/PObserveJavaUnitTest/: .gitignore  README.md  pom.xml
Src/PObserve/PObserveRegressionTesting/: build.gradle.kts  setup.sh
Src/PRuntimes/CSharpRuntime/: CSharpRuntime.csproj  GodMachine.cs  PEvent.cs  PLogFormatter.cs  PMachine.cs  PModule.cs  PMonitor.cs  PrtValues.cs
Src/PRuntimes/CoyoteRuntime/: CoyoteRuntime.csproj  GodMachine.cs  PEvent.cs  PInterfaces.cs  PLogFormatter.cs  PMachine.cs  PModule.cs  PMonitor.cs  PrtTypes.cs  PrtValues.cs
Src/PRuntimes/PCRuntime/: CMakeLists.txt
Src/PRuntimes/PCSharpRuntime/: CSharpRuntime.csproj  GodMachine.cs  PEvent.cs  PInterfaces.cs  PJsonFormatter.cs  PLogFormatter.cs  PMachine.cs  PModule.cs  PMonitor.cs  PTimeLogger.cs  PrtTypes.cs
Src/PRuntimes/PContainmentRuntime/: build.gradle  pom.xml
Src/PRuntimes/PCoverRuntime/: pom.xml
Src/PRuntimes/PExRuntime/: pom.xml
Src/PRuntimes/PExplicitRuntime/: pom.xml  regressionTestScript.sh
Src/PRuntimes/PJavaRuntime/: .gitignore  LICENSE  README.md  build.gradle  pom.xml
Src/PRuntimes/PSymRuntime/: CLI_OPTIONS.md  README.md  SOLVERS.md  UNSUPPORTED.md  pom.xml
Src/PRuntimes/PSymbolicRuntime/: CLI_OPTIONS.md  pom.xml  (+4 more)
Src/PSharpRuntime/: GodMachine.cs  PLogger.cs  PMachine.cs  PModule.cs  PMonitor.cs  PSharpRuntime.csproj  PrtTypes.cs  PrtValues.cs
Src/PTester/: PTester.sln
Src/PVisualizer/: FormStuff.cs  PVisualizer.csproj  PVisualizer.sln  PVisualizerx64.csproj  Program.cs  PtoGraph.cs
Src/Pc/: CData.cs  CommandLine.cs  Compiler.cs  PData.cs  PProgram.cs  PToZing.cs  PTypes.cs  Pc.csproj  Pc.sln  Pcx64.csproj  Pcx64.sln  ZingData.cs
Src/PeasyAI/: .cursorrules  .gitignore  .peasyai-schema.json  Config  LICENSE  Makefile  README.md  analyze-errors.py  cursor-mcp-settings.example.json  env.template  mcp-config.json  pyproject.toml  requirements.txt  run_mcp.sh  visualize-pk-vs-tokens.py
Src/Prt/: CMakeLists.txt  Prt.c  Prt.h  Prt.sln  Prt.vcxproj  Prt.vcxproj.filters  PrtProgram.h
Src/PrtCmd/: PrtCmd.c  PrtCmd.h  PrtCmd.vcxproj  PrtCmd.vcxproj.filters  PrtCmdPrinting.c  PrtCmdPrinting.h
Src/PrtDist/: Prt.sln  PrtDist.sln  PrtWinUser.vcxproj
Src/Samples/: ReadMe.txt
(+10169 files in other folders)
