[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "peasyai-mcp"
version = "1.0.0"
description = "PeasyAI – MCP server for P language code generation, compilation, and verification"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "P-Org" },
]
keywords = ["mcp", "p-language", "formal-verification", "code-generation", "model-checking"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Testing",
]

dependencies = [
    "fastmcp>=0.4.0",
    "mcp[cli]>=1.10.1",
    "openai>=1.0.0",
    "anthropic>=0.30.0",
    "pydantic>=2.0",
    "python-dotenv",
    "whatthepatch",
    "sentence-transformers",
    "pyyaml",
]

[project.optional-dependencies]
bedrock = ["boto3", "botocore"]
streamlit = ["streamlit", "st-diff-viewer", "streamlit_scrollable_textbox"]
dev = ["pytest", "matplotlib"]

[project.scripts]
peasyai-mcp = "ui.mcp.entry:main"

[project.urls]
Homepage = "https://github.com/p-org/P"
Repository = "https://github.com/p-org/P"
Documentation = "https://p-org.github.io/P/"

# ---------------------------------------------------------------------------
# Hatch build configuration
# ---------------------------------------------------------------------------
[tool.hatch.build.targets.wheel]
# The installable Python code lives under src/
packages = ["src/core", "src/ui", "src/utils"]

[tool.hatch.build.targets.wheel.sources]
# Map src/core → core, src/ui → ui so import paths stay the same
"src" = ""

[tool.hatch.build.targets.wheel.force-include]
# Bundle the resources directory inside the wheel so prompts, examples,
# and syntax guides are available after pip install.
"resources" = "peasyai_resources"

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "resources/",
    "pyproject.toml",
    "README.md",
    "LICENSE",
]

